--- a/client/css/index.css
+++ b/client/css/index.css
@@ -63,8 +63,8 @@
   margin: 3px 3px 3px 0px; 
 }
 .logo {
-  margin-bottom: -5px;
-  height: 40px;
+  height: 80px;
+  margin-bottom: -35px;
 }
 
 @media only screen and (min-width: 940px) {
